--- a/404.md
+++ b/404.md
@@ -1,6 +1,16 @@
 ---
-title: "Page Not Found"
+title: "Извините, страница не найдена"
 search: exclude
----  
+---
 
-Sorry, but the page you were trying to view does not exist. Try searching for it or looking at the URL to see if it looks correct.
+{% include note.html content="Сайт находится в процессе наполнения." %}
+
+Страница, которую Вы пытаетесь открыть, не найдена.  Возможно, у меня
+просто еще не дошли руки, чтобы добавить этот проект на сайт.  Все
+проекты из боковой панели у меня есть, но добавление требует времени.
+Пожалуйста, проверьте ссылку позже.
+
+В настоящий момент я работаю над добавлением книги «[Как написать
+книгу](/htwb_landing.html)»
+
+[Список всех моих проектов](/all-projects.html)
